--- a/Finder-Recipe/frontend/.env
+++ b/Finder-Recipe/frontend/.env
@@ -6,7 +6,7 @@ VITE_FIREBASE_APP_MESSAGING_SENDER_ID= "414653290015",
 VITE_FIREBASE_APP_APP_ID= "1:414653290015:web:8b000d41534b259e48e72a",
 VITE_FIREBASE_APP_MEASUREMENT_ID= "G-CS6LY62FV1"
 VITE_API_URL=http://localhost:3001/api
-VITE_SPOONACULAR_API_KEY=587e27bf1c12454786913bca3f195a51
+VITE_SPOONACULAR_API_KEY=  585edf42125444229b8983b29941a78e
 
 #  apiKey: "AIzaSyDVUPEb6QXiHeBrLpYXSnlba_OceOuU9xU",
 #   authDomain: "finder-recipe.firebaseapp.com",
