--- a/Finder-Recipe/frontend/.env
+++ b/Finder-Recipe/frontend/.env
@@ -7,6 +7,7 @@ VITE_FIREBASE_APP_APP_ID= "1:414653290015:web:8b000d41534b259e48e72a",
 VITE_FIREBASE_APP_MEASUREMENT_ID= "G-CS6LY62FV1"
 VITE_API_URL=http://localhost:3001/api
 VITE_SPOONACULAR_API_KEY=  4d907507d3444003a838e03417bb13c4
+VITE_NEWSAPI_KEY = 8897e982c44d40479389cbd70ecfd0a4
 
 #  apiKey: "AIzaSyDVUPEb6QXiHeBrLpYXSnlba_OceOuU9xU",
 #   authDomain: "finder-recipe.firebaseapp.com",
